--- a/platforms/ios/www/assets/revision.html
+++ b/platforms/ios/www/assets/revision.html
@@ -1,9 +1,14 @@
+<div class="revision">Version 0.8.1</div>
+<ul>
+    <li>Sync bookmarks from old app</li>
+</ul>
+
 <div class="revision">Version 0.8.0</div>
 <ul>
     <li>Slider intro</li>
     <li>Splash screen</li>
     <li>Can play and manipulate MIDI</li>
-    <li>Files downloadable to SD Card</li>
+    <li>Hymnals downloadable to device</li>
 </ul>
 
 <div class="revision">Version 0.7.6</div>
@@ -47,32 +52,4 @@
     <li>Home button</li>
     <li>Reduced file size</li>
     <li>Additional colors in palette</li>
-</ul>
-
-<div class="revision">Version 0.6.0</div>
-<ul>
-    <li>Sliding navigation bar added</li>
-    <li>Toast message</li>
-    <li>Customizable background color</li>
-    <li>New floating action buttons (fab) menu</li>
-</ul>
-
-<div class="revision">Version 0.5.6</div>
-<ul>
-    <li>Pinch-zoom enabled.</li>
-    <li>Bug fixes</li>
-    <li>Dark and bright themes</li>
-</ul>
-
-<div class="revision">Version 0.5.4</div>
-<ul>
-    <li>New look.</li>
-    <li>New set of icons</li>
-    <li>Bug fixes</li>
-    <li>Pinch-zoom and swiping feature temporarily disabled.</li>
-    <li>Improved searching feature</li>
-    <li>New input pad to input hymn numbers</li>
-    <li>Lyrics correction for some hymns</li>
-    <li>User can highlight to copy lyrics to clipboard</li>
-    <li>5 previously viewed hymns are kept in history</li>
 </ul>
