--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,20 +5,29 @@
 </ion-header>
 
 <ion-content>
-    <div class="banner" type="error" *ngIf="!isOnline">
-        No internet connection.
-    </div>
-    <div class="banner" type="progress" *ngIf="isOnline && fetching">
+    <div class="banner" type="progress" *ngIf="fetching">
         Loading hymnals...
     </div>
+    <ion-item-group *ngIf="offlineHymnalList.length == 0" class="empty">
+        <ion-item-divider>DOWNLOADED HYMNALS</ion-item-divider>
+        <ion-item>
+            <p>No downloaded hymns to display</p>
+        </ion-item>
+    </ion-item-group>
     <ion-item-group *ngIf="offlineHymnalList.length > 0">
-        <ion-item-divider>OFFLINE HYMNALS</ion-item-divider>
+        <ion-item-divider>DOWNLOADED HYMNALS</ion-item-divider>
         <ion-item *ngFor="let hymnal of offlineHymnalList" (tap)="setActiveHymnal(hymnal.id)" [ngClass]="{ 'active': (activeHymnal == hymnal.id) }">
             <ion-thumbnail item-start>
                 <img [src]="hymnal.image" [alt]="hymnal.name" />
             </ion-thumbnail>
             <h2>{{ hymnal.name }}</h2>
             <p>{{hymnal.count}} hymns</p>
+        </ion-item>
+    </ion-item-group>
+    <ion-item-group *ngIf="!onlineHymnalList" class="empty">
+        <ion-item-divider>ONLINE HYMNALS</ion-item-divider>
+        <ion-item>
+            <p>No online hymns to display</p>
         </ion-item>
     </ion-item-group>
     <ion-item-group *ngIf="onlineHymnalList">
