input modal focus

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,7 +8,7 @@
     <div class="banner" type="progress" *ngIf="fetching">
         Loading hymnals...
     </div>
-    <ion-item-group *ngIf="offlineHymnalList.length == 0" class="empty">
+    <ion-item-group *ngIf="offlineHymnalList.length == 0 && isCordova" class="empty">
         <ion-item-divider>DOWNLOADED HYMNALS</ion-item-divider>
         <ion-item>
             <p>No downloaded hymns to display</p>
