--- a/src/pages/reader/reader.html
+++ b/src/pages/reader/reader.html
@@ -24,7 +24,9 @@
 <ion-content padding #lyricsContainer class="{{ 'theme-' + themeString }}">
     <div class="hymn-content" *ngIf="currentHymn" (pinchmove)="pinchZoom($event)" (pinchend)="curScale = 0" [ngStyle]="{'paddingBottom.px': extraSpace, 'text-align': alignment, 'fontSize.em': fontSize, 'fontFamily': fontName}">
         <div class="hymn-title">
-            <h2 class="hymn-title" (click)="presentTunePopover($event)">Hymn #{{ currentHymn.title }}</h2>
+            <h2 class="hymn-title" (click)="presentTunePopover($event)">
+                Hymn #{{ currentHymn.title }}
+            </h2>
         </div>
         <div class="lyrics" [innerHTML]="currentHymn.lyrics" (tap)="toggleFullLyrics($event)">
         </div>
